# data-platform

./: .editorconfig  .eslintignore  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  angular.json  docker-compose.yml  gen_doc_stubs.py  index.html  mkdocs.yml  nx.json  objects.inv  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  workspace.json
.github/workflows/: nx_affected_ci.yaml
apps/: __init__.py
apps/financial/: __init__.py
apps/financial/bot/: __init__.py
apps/financial/bot/fundamentus/: README.md  project.json  pyproject.toml
apps/financial/bot/fundamentus/bot/: __init__.py  hello.py
apps/financial/bot/fundamentus/docs/source/: api.md
apps/financial/bot/fundamentus/tests/: conftest.py  test_hello.py  test_index.py
apps/services/api/api/: jest.config.js  project.json
apps/services/api/api/src/: main.ts
apps/services/api/api/src/app/: app.module.ts
apps/services/api/post/: jest.config.js  project.json
apps/services/api/post-e2e/: cypress.json  package.json  project.json
apps/services/api/post/src/: index.html
apps/services/api/post/src/app/: app.component.html  app.component.ts
dependency-graph/static/: environment.js
docs/: gen_doc_stubs.py  index.md  requirements.txt
docs/dependency-graph/: index.html
docs/dependency-graph/static/: 3rdpartylicenses.txt  environment.js  main.esm.js  polyfills.esm.js  runtime.esm.js  styles.css
docs/openapi/: env.js
libs/api/api/data-access-article/: jest.config.js  project.json
libs/api/api/data-access-article/src/lib/: article.model.ts  article.service.ts
libs/api/api/data-access-dtos/: jest.config.js  project.json
libs/api/api/feature-article/: jest.config.js  project.json
libs/api/api/feature-article/src/lib/: api-feature-article.module.ts  article.controller.ts
libs/api/api/feature-config/: jest.config.js  project.json
libs/api/api/feature-config/src/lib/: api-feature-config.module.ts
libs/api/api/utils-config/: jest.config.js  project.json
libs/api/article/data-access-api/: .eslintrc.json  jest.config.js  project.json
libs/api/article/data-access-api/src/lib/: api.module.ts
libs/api/article/data-access-api/typedoc/: index.md
libs/api/article/data-access-api/typedoc/classes/: ApiModule.md  ArticlesApiService.md  Configuration.md
libs/api/article/data-access-api/typedoc/interfaces/: Article.md  ConfigurationParameters.md  CreateArticleDto.md
libs/bot/: __init__.py
libs/bot/core/: __init__.py
libs/bot/core/crawler-base/: README.md  __init__.py  project.json  pyproject.toml
libs/bot/core/crawler-base/crawler/: __init__.py
libs/bot/proxy/proxy-loader/: Dockerfile  README.md  docker-compose.yml  project.json  pyproject.toml
libs/bot/proxy/proxy-loader/proxy/: __init__.py  free_proxy.py  parser.py  static.py
libs/bot/proxy/proxy-loader/tests/: test_index.py
libs/shared/core/: .coverage  README.md  __init__.py  package.json  project.json  pyproject.toml
libs/shared/core/core/: logging.py
libs/shared/core/docs/source/: api.md
libs/shared/core/shared_core/: __init__.py  time.py
libs/shared/core/tests/: conftest.py  test_logging.py  test_time.py
libs/shared/development/: .coverage  README.md  __init__.py  project.json  pyproject.toml
libs/shared/development/development/hooks/: __init__.py
libs/shared/development/docs/source/: api.md
libs/shared/development/shared_development/: __init__.py
libs/shared/development/shared_development/hooks/: report.py
libs/shared/development/tests/: conftest.py  test_report.py
libs/shared/feature-config/: README.md  project.json  pyproject.toml
libs/shared/feature-config/feature/: __init__.py  redis.py
libs/shared/utils-configs/: README.md  project.json  pyproject.toml
libs/shared/utils-configs/tests/: test_index.py
libs/shared/utils-configs/utils/: __init__.py  redis_conn.py
reference/apps/financial/bot/fundamentus/: index.html
reference/apps/financial/bot/fundamentus/CHANGELOG/: index.html
reference/apps/financial/bot/fundamentus/code_reference/bot/hello/: index.html
reference/apps/financial/bot/fundamentus/docs/source/api/: index.html
reference/libs/api/api/data-access-article/: index.html
reference/libs/api/api/data-access-article/typedoc/: index.html
reference/libs/api/api/data-access-article/typedoc/classes/ApiDataAccessArticleModule/: index.html
reference/libs/api/api/data-access-article/typedoc/classes/Article/: index.html
reference/libs/api/api/data-access-article/typedoc/classes/ArticleService/: index.html
reference/libs/api/api/data-access-dtos/: index.html
reference/libs/api/api/data-access-dtos/typedoc/: index.html
reference/libs/api/api/data-access-dtos/typedoc/classes/CreateArticleDto/: index.html
reference/libs/api/api/feature-article/: index.html
reference/libs/api/api/feature-article/typedoc/: index.html
reference/libs/api/api/feature-article/typedoc/classes/ApiFeatureArticleModule/: index.html
reference/libs/api/api/feature-config/: index.html
reference/libs/api/api/feature-config/typedoc/: index.html
reference/libs/api/api/utils-config/: index.html
reference/libs/api/api/utils-config/typedoc/: index.html
reference/libs/api/article/data-access-api/: index.html
reference/libs/api/article/data-access-api/typedoc/: index.html
reference/libs/shared/core/: index.html
reference/libs/shared/core/CHANGELOG/: index.html
reference/libs/shared/core/code_reference/core/logging/: index.html
reference/libs/shared/core/code_reference/core/time/: index.html
reference/libs/shared/core/docs/source/api/: index.html
reference/libs/shared/development/: index.html
reference/libs/shared/development/CHANGELOG/: index.html
reference/libs/shared/development/docs/source/api/: index.html
reports/libs/shared/core/unittests/: junit.xml
reports/libs/shared/core/unittests/html/: index.html
reports/libs/shared/development/unittests/: junit.xml
reports/libs/shared/development/unittests/html/: index.html
scripts/: coverage.js  junit.js  nx.js
search/: search_index.json
summary/: index.html
(+7 files in other folders)
