[tool.poetry]
name = "data-platform"
version = "1.0.0"
description = "Data Platform with Monorepo Approach"
authors = [ "FabioCaffarello <fabio.caffarello@gmail.com>" ]
readme = "README.md"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"

    [tool.poetry.dependencies.shared-core]
    path = "libs/shared/core"
    develop = true

  [tool.poetry.group.dev.dependencies]
  pre-commit = "^2.20.0"

    [tool.poetry.group.dev.dependencies.shared-development]
    path = "libs/shared/development"
    develop = true
    extras = [ "wrangler" ]

  [tool.poetry.group.docs.dependencies]
  mkdocs = "1.3.1"
  mkdocs-material = "8.3.9"
  mkdocs-material-extensions = "1.0.3"
  mkdocs-autorefs = "0.4.1"
  mkdocstrings = "0.19.0"
  mkdocstrings-python = "0.7.1"
  mkdocs_gen_files = "0.3.5"
  mkdocs-literate-nav = "0.4.1"
  mkdocs-include-markdown-plugin = "3.5.2"
  mkdocs-swagger-ui-tag = "0.3.2"
  plantuml-markdown = "^3.6.2"
  pyment = "^0.3.3"

[build-system]
requires = [ "poetry-core==1.1.0b3" ]
build-backend = "poetry.core.masonry.api"
