[tool.coverage.run]
branch = true
source = [ "shared_core" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../../coverage/libs/shared/core/html' --cov-report xml:'../../../coverage/libs/shared/core/coverage.xml' --junitxml='../../../reports/libs/shared/core/unittests/junit.xml' --html='../../../reports/libs/shared/core/unittests/html/index.html'"

[tool.poetry]
name = "shared-core"
version = "1.0.0"
description = "Shared Core"
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [[tool.poetry.packages]]
  include = "shared_core"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  python-json-logger = "^2.0.2"

    [tool.poetry.group.dev.dependencies.shared-development]
    path = "../development"
    develop = true

[build-system]
requires = [ "poetry-core==1.1.0b3" ]
build-backend = "poetry.core.masonry.api"
