[tool.coverage.run]
branch = true
source = [ "utils" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../../coverage/libs/shared/utils-configs/html' --cov-report xml:'../../../coverage/libs/shared/utils-configs/coverage.xml' --junitxml='../../../reports/libs/shared/utils-configs/unittests/junit.xml' --html='../../../reports/libs/shared/utils-configs/unittests/html/index.html'"

[tool.poetry]
name = "utils-config"
version = "1.0.0"
description = "Python utils configs"
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [[tool.poetry.packages]]
  include = "utils"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  redis = "^4.3.4"

[tool.poetry.group.dev.dependencies.shared-core]
path = "../core"
develop = true

[tool.poetry.group.dev.dependencies.shared-development]
path = "../development"
develop = true

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
