[tool.coverage.run]
branch = true
source = [ "crawler" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../../../coverage/libs/bot/core/crawler-base/html' --cov-report xml:'../../../../coverage/libs/bot/core/crawler-base/coverage.xml' --junitxml='../../../../reports/libs/bot/core/crawler-base/unittests/junit.xml' --html='../../../../reports/libs/bot/core/crawler-base/unittests/html/index.html'"

[tool.poetry]
name = "crawler-base"
version = "1.0.0"
description = "Base scrapy crawler"
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [[tool.poetry.packages]]
  include = "crawler"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"

[tool.poetry.group.dev.dependencies.shared-core]
path = "../../../shared/core"
develop = true

[tool.poetry.group.dev.dependencies.shared-development]
path = "../../../shared/development"
develop = true

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
